--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,6 +11,7 @@
 
 body {
     background-color: white;
+    overflow-x:hidden;
 }
 
 .navigation {
@@ -22,6 +23,7 @@ body {
     width: 100%;
     background: #030303;
     transition: all 0.5s;
+    position: fixed;
 }
 
 .navigation .logo {
@@ -69,4 +71,92 @@ body {
 .menu .bar:nth-child(1),
 .menu .bar:nth-child(3){
     background: #16D833;
+}
+
+/* primeira section */
+
+.home {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 10%;
+}
+
+.home-text {
+    width: 37rem;
+}
+
+.home-text .text-h4{
+    font-size: 1.5rem;
+    color: #16D833;
+    margin-bottom: 1rem;
+}
+
+.home-text .text-h1{
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    line-height: 4rem;
+}
+
+.home-img img {
+    height: 350px;
+    width: 100%;
+}
+
+.home-text p {
+    margin-bottom: 4rem;
+}
+
+.home-btn{
+    padding: 15px 45px;
+    background-color: #16D833;
+    color: white;
+    border-radius: 10px;
+    font-weight: 700;
+    transition: all 0.5s;
+}
+
+.home-btn:hover {
+    background-color: #009534;
+}
+
+/* segunda section */
+
+.home2 {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 10%;
+    background-color: black;
+}
+
+.home-text2 {
+    width: 37rem;
+}
+
+.home-text2 .text-h4{
+    font-size: 1.5rem;
+    color: #16D833;
+    margin-bottom: 1rem;
+}
+
+.home-text2 .text-h1{
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    line-height: 4rem;
+    color: white;
+}
+
+.home-text2 p {
+    margin-bottom: 4rem;
+    color: white;
+}
+
+.home-img2 img {
+    height: 350px;
+    width: 350px;
 }
