--- a/css/estilo.css
+++ b/css/estilo.css
@@ -24,6 +24,7 @@ body {
     background: #030303;
     transition: all 0.5s;
     position: fixed;
+    z-index: 5;
 }
 
 .navigation .logo {
@@ -159,4 +160,125 @@ body {
 .home-img2 img {
     height: 350px;
     width: 350px;
+}
+
+/* formulario */
+
+
+.formulario {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 10%;
+}
+
+main .container {
+    background: #16D833;
+    color: white;
+    max-width: 350px;
+    min-width: 60vh;
+    padding: 2rem;
+    box-shadow: 25px 15px 10px rgba(0,0,0,0.2);
+    border-radius: 8px;
+    transition: all 0.5s;
+}
+
+form h2 {
+    font-weight: 600;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+
+form h2::before {
+    content: '';
+    position: absolute;
+    height: 4px;
+    width: 25px;
+    bottom: 3px;
+    left: 0;
+    border-radius: 8px;
+    background: linear-gradient(45deg,whitesmoke,white);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-field {
+    position: relative;
+}
+
+.input-field label {
+    display: flex;
+    font-size: 1em;
+    gap: 10;
+}
+
+.input-field input, .input-field select {
+    margin-bottom: 12px;
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    font-size:0.9rem;
+    box-shadow: 1px 1px 6px #0000001c;
+    padding: 0.6rem 1.2rem;
+}
+
+form input[type="submit"] {
+    color: #16D833;
+    font-size: 1em;
+    font-weight: 800;
+    border:1px solid rgba(22, 216, 51, 0.4);
+    border-radius: 10px;
+    margin-top: 2rem;
+    padding: 15px 45px;
+    cursor: pointer; 
+    background: white;
+    transition: all 0.3s;
+}
+
+form input[type="submit"]:hover {
+  letter-spacing: 0.5px;
+}
+
+@media (max-width:785px) {
+    .navigation {
+        padding: 18px 20px;
+    }
+    .menu {
+        display: block;
+    }
+    .menu.ativo .bar:nth-child(1){
+         transform: translateY(8px) rotate(45deg);
+         
+    }
+    .menu.ativo .bar:nth-child(2){
+        opacity: 0;     
+   }
+   .menu.ativo .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+   }
+    .nav-menu {
+        position: fixed;
+        right: -100%;
+        top: 70px;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        background: black;
+        gap: -10px;
+        transition: 0.3s;
+    }
+    .nav-menu.ativo {
+        right: 0;
+    }
+    .nav-item {
+        margin: 16px 0;
+    }
+  
 }
