--- a/css/estilo.css
+++ b/css/estilo.css
@@ -178,7 +178,7 @@ main .container {
     background: #16D833;
     color: white;
     max-width: 350px;
-    min-width: 60vh;
+    min-width: 40vh;
     padding: 2rem;
     box-shadow: 25px 15px 10px rgba(0,0,0,0.2);
     border-radius: 8px;
@@ -246,9 +246,11 @@ form input[type="submit"]:hover {
   letter-spacing: 0.5px;
 }
 
-@media (max-width:785px) {
+
+@media screen and (max-width:767.98px) {
     .navigation {
         padding: 18px 20px;
+       
     }
     .menu {
         display: block;
@@ -279,6 +281,89 @@ form input[type="submit"]:hover {
     }
     .nav-item {
         margin: 16px 0;
+    }
+    /*main */
+    .home,.home2,.formulario{
+        width: auto;
+        height: 100%;
+        padding: 0;
+        flex-direction: column;
+        text-align: center;
+        overflow: hidden;
+        gap: 5rem;
+    }
+    .home .text-h4,.home2 .text-h4, .home-text .text-h4{
+        font-size: 10px;
+        flex-direction: column;
+    }
+    .home .text-h1, .home2 .text-h1, .home-text .text-h1{
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
+    .home p,.home2 p, .home-text p{
+        font-size: 1em;
+    }
+    .home-img,.home-img2{
+       display: none;
+    }
+  
+} @media screen and (max-width:991.98px) {
+    .navigation {
+        padding: 18px 20px;
+       
+    }
+    .menu {
+        display: block;
+    }
+    .menu.ativo .bar:nth-child(1){
+         transform: translateY(8px) rotate(45deg);
+         
+    }
+    .menu.ativo .bar:nth-child(2){
+        opacity: 0;     
+   }
+   .menu.ativo .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+   }
+    .nav-menu {
+        position: fixed;
+        right: -100%;
+        top: 70px;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        background: black;
+        gap: -10px;
+        transition: 0.3s;
+    }
+    .nav-menu.ativo {
+        right: 0;
+    }
+    .nav-item {
+        margin: 16px 0;
+    }
+    /*main */
+    .home,.home2,.formulario{
+        width: 100%;
+        height: 100%;
+        padding: 150px 2%;
+        flex-direction: column;
+        text-align: center;
+        overflow: hidden;
+        gap: 5rem;
+    }
+    .home .text-h4,.home2 .text-h4, .home-text .text-h4{
+        font-size: 25px;
+    }
+    .home .text-h1, .home2 .text-h1, .home-text .text-h1{
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
+    .home p,.home2 p, .home-text p{
+        font-size: 20px;
+    }
+    .home-img,.home-img2{
+       object-fit: contain;
     }
   
 }
